Bug 38371 - [Qt] GraphicsLayer: animation incorrect when scrolling
Summary: [Qt] GraphicsLayer: animation incorrect when scrolling
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Nobody
URL: http://www.the-art-of-web.com/css/css...
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-04-29 20:41 PDT by Noam Rosenthal
Modified: 2010-05-02 09:18 PDT (History)
3 users (show)

See Also:


Attachments
added a scroll-position test in the right place (1.43 KB, patch)
2010-04-29 21:03 PDT, Noam Rosenthal
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Noam Rosenthal 2010-04-29 20:41:44 PDT
The rocket doesn't scroll together with the page when animated.
Comment 1 Noam Rosenthal 2010-04-29 20:56:16 PDT
It seems like ChromeClientQt::scroll is not called - which means the code path that moves the composited layers around also doesn't work.
Comment 2 Noam Rosenthal 2010-04-29 21:03:53 PDT
Created attachment 54779 [details]
added a scroll-position test in the right place
Comment 3 WebKit Commit Bot 2010-05-02 01:01:42 PDT
Comment on attachment 54779 [details]
added a scroll-position test in the right place

Clearing flags on attachment: 54779

Committed r58645: <http://trac.webkit.org/changeset/58645>
Comment 4 WebKit Commit Bot 2010-05-02 01:01:48 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Simon Hausmann 2010-05-02 09:18:25 PDT
Revision r58645 cherry-picked into qtwebkit-2.0 with commit b34ecd4e86f008b64cf0d7302ad6018383fa71c7