2010-05-02  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayer: animation incorrect when scrolling
        https://bugs.webkit.org/show_bug.cgi?id=38371

        This is a regression introduced with the invalidate-on-scroll code path, that uses QGraphicsWebViewPrivate::update()
        instead of QGraphicsWebViewPrivate::scroll(). The patch makes sure that the scrolling position is correct on
        each content update - this shouldn't have a performance impact - the only overhead is an additional value-test on each update.

        Tested by http://www.the-art-of-web.com/css/css-animation/

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::update):

Canonical link: https://commits.webkit.org/49900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58645 268f45cc-cd09-0410-ab3c-d52691b4dbfc